--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body{
     border-bottom: solid black 2px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top:0;
+    background-color: white;
+    z-index: 1;
+
 }
 .navbar_s1_title{
     color: #A435F0;
@@ -33,6 +38,7 @@ body{
     border: none;
     width: 100%;
     font-size: 16px;
+    background-color: transparent;
 }
 .navbar__s2 input:focus{
     outline: none;
@@ -41,6 +47,28 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;
+}
+
+/* My Learning Popup */
+
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border:solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+    display: block;
+
 }
 
 .categories{
@@ -56,10 +84,27 @@ body{
     border-radius: 30px;
 
 }
+
+.sale-image{
+    position: relative;
+}
+    
+
 .sale-image img{
     width: 100%;
     
 }
+
+.sale-image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 20%;
+    left: 5%;
+}
+
 .recommended{
     padding: 10px;
     
